<resources>
    <string name="app_name">Mechaban</string>
    <string name="lewati">Lewati</string>
    <string name="next_icon">next icon</string>
    <string name="back_icon">back icon</string>
    <string name="mulai_sekarang">Mulai Sekarang</string>
    <string name="login">Login</string>
    <string name="login_untuk_melanjutkan">Login untuk melanjutkan</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="buat_akun_baru">Buat akun baru?</string>
    <string name="register_sekarang">Register sekarang</string>
    <string name="register">Register</string>
    <string name="register_untuk_membuat_akun">Register untuk membuat akun</string>
    <string name="no_hp">No. HP</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_sekarang">Login sekarang</string>
    <string name="nama">Nama</string>
    <string name="beranda">Beranda</string>
    <string name="garasi">Garasi</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="akun">Akun</string>
    <string name="percayakan_perawatan_mobilmu_pada_kami">Percayakan perawatan mobilmu pada kami</string>
    <string name="tambah_mobil">Tambah Mobil</string>
    <string name="tidak_ada_mobil">Tidak Ada Mobil</string>
    <string name="empty_illustration">Empty illustration</string>
    <string name="simpan">Simpan</string>
    <string name="memuat">Memuat...</string>
    <string name="logo">Logo</string>
    <string name="servis">Servis</string>
    <string name="rp">Rp</string>
    <string name="pilih">Pilih</string>
    <string name="tutup">Tutup</string>
    <string name="total">Total</string>
    <string name="detail_servis">Detail Servis</string>
    <string name="lanjut">Lanjut</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="tambah_foto">Tambah foto</string>
    <string name="pasang_foto_yang_oke_semua_orang_bakal_bisa_lihat">Pasang foto yang oke! Semua orang bakal bisa lihat.</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="masukkan_data_mobil_anda">Masukkan Data Mobil Anda</string>
    <string name="nomor_polisi_mobil">Nomor Polisi Mobil</string>
    <string name="ab">AB</string>
    <string name="_1234">1234</string>
    <string name="cde">CDE</string>
    <string name="merek">Merek</string>
    <string name="tipe_model">Tipe/Model</string>
    <string name="transmisi">Transmisi</string>
    <string name="tahun_produksi">Tahun Produksi</string>
    <string name="check_icon">Check icon</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="hapus_mobil">Hapus Mobil</string>
    <string name="hapus_akun">Hapus Akun</string>
    <string name="kirim">Kirim</string>
    <string name="rincian_servis">Rincian Servis</string>
    <string name="lupa_password2">Lupa Password</string>
    <string name="ilustrasi_forget_password">Ilustrasi forget password</string>
    <string name="ganti_password">Ganti Password</string>
    <string name="ganti">Ganti</string>
    <string name="masukkan_email_yang_terdaftar_lalu_kami_akan_mengirimkan_kode_otp_untuk_mereset_password">Masukkan email yang terdaftar lalu kami akan mengirimkan kode OTP untuk mereset password</string>
    <string name="pesan">Pesan</string>
    <string name="yuk_booking_sekarang">Yuk, Booking Sekarang!</string>
    <string name="montir_kami_akan_dengan_senang_hati_membantumu">Montir kami akan dengan senang hati membantumu</string>
    <string name="detail">Detail</string>
    <string name="batal">Batal</string>
    <string name="konsultasi">Konsultasi</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="booking">Booking</string>
    <string name="km">km</string>
    <string name="ambil">Ambil</string>
    <string name="selesai">Selesai</string>
    <string name="tidak_ada_montir_yang_kosong">Tidak ada montir yang kosong.</string>
    <string name="tambahkan">Tambahkan</string>
    <string name="tidak_ada_montir_tersebut">Tidak ada montir tersebut.</string>
    <string name="montir_siapa_yang_kamu_tambahkan">Montir siapa yang kamu tambahkan?</string>
    <string name="pilih_booking">Pilih Booking</string>
    <string name="tidak_ada_booking_hari_ini">Tidak ada booking hari ini.</string>
    <string name="yuk_ambil_booking_sekarang">Yuk, Ambil Booking Sekarang!</string>
    <string name="pelanggan_sedang_menunggumu_di_sana">Pelanggan sedang menunggumu di sana.</string>
    <string name="montir_segera_menuju_ke_lokasimu">Montir segera menuju ke lokasimu</string>
    <string name="detail_pesanan">Detail Pesanan</string>
    <string name="id_booking">ID Booking</string>
    <string name="tanggal">Tanggal</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat">Alamat</string>
    <string name="hubungi_montir">Hubungi Montir</string>
    <string name="rating">Rating</string>
    <string name="status">Status</string>
    <string name="tentang_kami">Tentang Kami</string>
    <string name="hubungi_kami">Hubungi Kami</string>
    <string name="anda_menyukai_booking_ini">Anda menyukai booking ini?</string>
    <string name="kode_belum_dikirim">Kode belum dikirim?</string>
    <string name="kirim_ulang">Kirim ulang</string>
    <string name="password_baru">Password Baru</string>
</resources>