<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.customer.fragment.GarageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="16dp" >

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_illustration"
                android:src="@drawable/empty"
                android:layout_marginBottom="32dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tidak_ada_mobil"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/percayakan_perawatan_mobilmu_pada_kami"
                android:fontFamily="@font/montserrat_medium"
                android:textSize="16sp"
                android:textAlignment="center" />
        </LinearLayout>

        <Button
            android:id="@+id/tambah_mobil_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/tambah_mobil"
            android:fontFamily="@font/montserrat_semibold"
            android:textSize="16sp"/>

    </LinearLayout>

</FrameLayout>