<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingBottom="16dp">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/drag_handle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_servis"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat_semibold"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:fontFamily="@font/montserrat_medium"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/price_text"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/rp"
            android:textAppearance="?attr/textAppearanceBodyLarge"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/montserrat_semibold"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        style="@style/Widget.Material3.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tutup"
        android:fontFamily="@font/montserrat_semibold"/>
</LinearLayout>
