<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.customer.garage.CarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/field">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tambah_mobil"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:fontFamily="@font/montserrat_semibold" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:padding="0dp"
            android:text="@string/simpan"
            android:fontFamily="@font/montserrat_semibold"
            android:textAppearance="?attr/textAppearanceButton"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/field"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/field_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/masukkan_data_mobil_anda"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/nomor_polisi_mobil"
                android:textAppearance="?attr/textAppearanceBody2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wilayah"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etKodeWilayah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:hint="@string/ab"
                        android:inputType="textCapCharacters"
                        android:maxLength="2" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/angka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="3"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAngka"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:hint="@string/_1234"
                        android:inputType="number"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/huruf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etHuruf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:gravity="center"
                        android:hint="@string/cde"
                        android:inputType="textCapCharacters"
                        android:maxLength="3" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/merk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/merek"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/merk_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/tipe_model"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/type_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/transmition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/transmisi"
                android:paddingBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/transmition_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/tahun_produksi"
                android:paddingBottom="32dp"
                app:startIconDrawable="@drawable/baseline_calendar_month_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/year_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="time" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hapus_mobil"
                android:textColor="@color/md_theme_error"
                android:fontFamily="@font/montserrat_semibold"
                android:visibility="gone"
                app:strokeColor="@color/md_theme_error"
                app:rippleColor="@color/md_theme_errorContainer"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>