<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    tools:context=".auth.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:textColor="@color/md_theme_onPrimary"/>

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <RelativeLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_bottom_sheet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/login_untuk_melanjutkan"
            android:textAppearance="?attr/textAppearanceBody1" />

        <LinearLayout
            android:id="@+id/field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_marginHorizontal="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Email Input Layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                app:helperTextEnabled="true"
                app:placeholderText="nama@email.com"
                app:startIconDrawable="@drawable/baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password Input Layout -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="92dp"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:helperTextEnabled="true"
                app:startIconDrawable="@drawable/baseline_key_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/field"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/lupa_password"
            android:textColor="@color/md_theme_primary" />

        <!-- Login Button at the bottom of the screen -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_caption_login"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="16dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login"
            android:textAppearance="?attr/textAppearanceTitleMedium" />

        <LinearLayout
            android:id="@+id/text_caption_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/buat_akun_baru" />

            <TextView
                android:id="@+id/register_hyperlink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/register_sekarang"
                android:textColor="@color/md_theme_primary" />

        </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
