<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_component"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="4dp"
    android:paddingVertical="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/merk_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:text="@string/merek" />

        <TextView
            android:id="@+id/type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/merk_text"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/montserrat_semibold"
            android:textAppearance="?attr/textAppearanceTitleLarge"
            android:text="@string/tipe_model" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/merk_text"
            android:text="@string/nama"
            android:fontFamily="@font/montserrat_medium" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/baseline_keyboard_arrow_right_24"
            app:tint="@color/md_theme_onBackground" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>